--- a/styles/Accueil.module.css
+++ b/styles/Accueil.module.css
@@ -4,7 +4,6 @@
 
 .content {
   padding-top: 100px;
-   min-height: 100vh;
 }
 
 .content h3 {
@@ -52,20 +51,10 @@
 @media only screen and (max-width: 768px) {
   .info_img {
     text-align: center !important;
-    margin-top: 50px !important;
+    margin-top: 50px;
     margin-bottom: 150px;
   }
 }
 
 @media only screen and (max-width: 576px) {
-  .info_img {
-    text-align: center !important;
-
-    margin-bottom: 150px;
-    
-  }
-  .content{
-    min-height: calc(100vh - 450px);
-  }
-  
 }
