--- a/styles/Projets.module.css
+++ b/styles/Projets.module.css
@@ -1,12 +1,23 @@
 .projets {
-  margin-top: 100px;
+  margin-top: 150px;
   display: flex;
-  justify-content: center;
+  justify-items: center;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  min-height: 120vh;
+}
+
+.projet {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px;
 }
 
 .img {
-  width: 400px;
-  height: 300px;
+  width: 100%;
+  height: 150%;
+  max-width: 550px;
 }
 
 .btn_img {
@@ -20,47 +31,65 @@
 .projetTitle {
   text-align: center;
   margin-bottom: 10px;
+  font-size: 1.5rem;
 }
 .boutton {
   border: none;
-  background-color: #242424;
+  background-color: #4caf50;
   font-weight: 500;
   border-radius: 15px;
   padding: 10px 20px;
+  text-decoration: none;
+  border-radius: 25px; /* coins arrondis */
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); /* ombre */
+  transition: all 0.3s ease 0s; /* animation de survol */
+  cursor: pointer;
+  margin-bottom: 60px;
 }
+
+.boutton:hover {
+  background-color: #3e8e41; /* couleur de fond au survol */
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2), 0 12px 30px 0 rgba(0, 0, 0, 0.19); /* ombre au survol */
+}
+
 .a {
   text-decoration: none;
-  color: aliceblue;
-  background-color: #242424;
+  color: black;
+  font-weight: bold;
+  background-color: #4caf50;
 }
-@media only screen and (max-width: 968px) {
+
+@media only screen and (max-width: 1268px) {
   .projets {
     display: flex;
-    min-height: 100vh;
     flex-direction: column;
     margin-top: 50px;
-    margin-bottom: 100px;
   }
+
   .projet {
-    display: flex;
-    flex-direction: column;
+    margin-bottom: 80px;
   }
+
+  .projetTitle {
+    font-size: 1.3rem;
+  }
+
   .img {
-    margin: 0px;
-    max-width: 350px;
+    width: 100%;
+    height: 110%;
+
     text-align: center;
   }
-  .btn_img {
-    display: flex;
-    flex-direction: column;
-  }
-  .boutton {
-    margin-bottom: 60px;
-  }
+}
+
+@media only screen and (max-width: 768px) {
   .projetTitle {
     margin-top: 60px;
   }
 }
 
 @media only screen and (max-width: 576px) {
+  .projetTitle {
+    font-size: 1.2rem;
+  }
 }
