--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,22 +24,15 @@ a {
   column-gap: 1rem;
 }
 
-p .info {
-  color: #0e1119;
-  line-height: 30px;
-  margin-top: 60px;
-  text-align: justify;
-}
+
 h1,
 h2,
-h3,
-h4,
-h5,
-h6 {
+h3
+ {
   color: #4A5373;
 }
 
-h2 {
+h1 {
   font-size: 2.5rem !important;
   margin-bottom: 1.5rem;
 }
@@ -62,7 +55,6 @@ h2 {
 
 footer {
   width: 100%;
-  position: fixed;
   bottom: 0;
   margin-top: 20px;
   padding-bottom: 10px;
